changed sports to trivia, and fixed some font size issues that were cropping up due to timing problems.

--- a/styles/site.css
+++ b/styles/site.css
@@ -19,10 +19,10 @@
     background-position: center;
     background-size: 68%;
 }
-#bibleverse, #sports, #technews, #weather {
+#bibleverse, #trivia, #technews, #weather {
     text-align: left;
 }
-#sports > div, #technews > div, #weather > div {
+#trivia > div, #technews > div, #weather > div {
     top: 0;
     transform: none;
 }
